--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+bitcoin (0.7.2-2) UNRELEASED; urgency=low
+
+  * Updated debian/control.in description, blockchain requires GB of
+    space (Closes: #677524)
+
+ -- Scott Howard <showard@debian.org>  Tue, 18 Dec 2012 10:19:16 -0500
+
 bitcoin (0.7.2-1) unstable; urgency=low
 
   * New upstream source. (Closes: #689917)
