--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ bitcoin (0.7.2-2) UNRELEASED; urgency=low
 
   * Updated debian/control.in description, blockchain requires GB of
     space (Closes: #677524)
+  * Set $HOME to debian/home since buildd do not have RW permission to
+    /home/buildd (Closes: #696262)
 
  -- Scott Howard <showard@debian.org>  Tue, 18 Dec 2012 10:19:16 -0500
 
