--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,9 @@ bitcoin (0.7.2-2) UNRELEASED; urgency=low
     space (Closes: #677524)
   * Set $HOME to debian/home since buildd do not have RW permission to
     /home/buildd (Closes: #696262)
+  * Remove mentions on anonymity in manual page, based on patch from
+    Matt Carallo.  Bitcoin is not anonymous without a lot of extra
+    effort, and it is misleading to claim otherwise (Closes: #696477).
 
  -- Scott Howard <showard@debian.org>  Tue, 18 Dec 2012 10:19:16 -0500
 
