--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,8 @@ bitcoin (0.7.2-2) UNRELEASED; urgency=low
   * Remove mentions on anonymity in manual page, based on patch from
     Matt Carallo.  Bitcoin is not anonymous without a lot of extra
     effort, and it is misleading to claim otherwise (Closes: #696477).
+  * New patch libdb-squeeze.patch to get src/db.cpp to build with
+    the libdb version in Debian/Squeeze. 
 
  -- Scott Howard <showard@debian.org>  Tue, 18 Dec 2012 10:19:16 -0500
 
