--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ bitcoin (0.7.2-2) UNRELEASED; urgency=low
     effort, and it is misleading to claim otherwise (Closes: #696477).
   * New patch libdb-squeeze.patch to get src/db.cpp to build with
     the libdb version in Debian/Squeeze. 
+  * Drop unused build-depend on libglib2.0-dev.
 
  -- Scott Howard <showard@debian.org>  Tue, 18 Dec 2012 10:19:16 -0500
 
