--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,10 @@ bitcoin (0.7.2-2) UNRELEASED; urgency=low
   * New patch libdb-squeeze.patch to get src/db.cpp to build with
     the libdb version in Debian/Squeeze. 
   * Drop unused build-depend on libglib2.0-dev.
+  * Add new package bitcoin-qt for the GUI version of the bitcoin
+    client.  Enabling dbus and QR code generation in GUI client.
+    Based on patches from Petter Reinholdtsen and Matt Carallo
+    (Closes: #627263).
 
  -- Scott Howard <showard@debian.org>  Tue, 18 Dec 2012 10:19:16 -0500
 
