--- a/debian/changelog
+++ b/debian/changelog
@@ -1,19 +1,26 @@
 bitcoin (0.7.2-2) UNRELEASED; urgency=low
 
+  [ Scott Howard ]
   * Updated debian/control.in description, blockchain requires GB of
-    space (Closes: #677524)
+    space.
+    Closes: #677524. Thanks to Gwern Branwen.
   * Set $HOME to debian/home since buildd do not have RW permission to
-    /home/buildd (Closes: #696262)
-  * Remove mentions on anonymity in manual page, based on patch from
-    Matt Carallo.  Bitcoin is not anonymous without a lot of extra
-    effort, and it is misleading to claim otherwise (Closes: #696477).
-  * New patch libdb-squeeze.patch to get src/db.cpp to build with
-    the libdb version in Debian/Squeeze. 
-  * Drop unused build-depend on libglib2.0-dev.
-  * Add new package bitcoin-qt for the GUI version of the bitcoin
-    client.  Enabling dbus and QR code generation in GUI client.
-    Based on patches from Petter Reinholdtsen and Matt Carallo
-    (Closes: #627263).
+    /home/buildd.
+    Closes: #696262.
+
+  [ Petter Reinholdtsen ]
+  * Remove mentions on anonymity in manual page: Only true with a lot of
+    extra effort, so misleading to claim that.
+    Closes: #696477. Thanks to Matt Caorallo.
+  * Add patch libdb-squeeze.patch to get src/db.cpp to support linkage
+    against older versions of BerkeleyDB, easing backporting to Squeeze.
+  * Stop build-depend needlessly on libglib2.0-dev.
+  * Add new binary package bitcoin-qt for the GUI version of the bitcoin
+    client, with DBus and QR code generation enabled.
+    Closes: #627263. Thanks to Leandro Lucarella and Matt Corallo.
+
+  [ Jonas Smedegaard ]
+  * Add README.source referencing our use of CDBS and git-buildpackage.
 
  -- Scott Howard <showard@debian.org>  Tue, 18 Dec 2012 10:19:16 -0500
 
