--- a/debian/changelog
+++ b/debian/changelog
@@ -17,10 +17,24 @@ bitcoin (0.7.2-2) UNRELEASED; urgency=low
   * Stop build-depend needlessly on libglib2.0-dev.
   * Add new binary package bitcoin-qt for the GUI version of the bitcoin
     client, with DBus and QR code generation enabled.
+    Build-depend on qt4-qmake, libqt4-dev and libqrencode-dev.
     Closes: #627263. Thanks to Leandro Lucarella and Matt Corallo.
 
   [ Jonas Smedegaard ]
   * Add README.source referencing our use of CDBS and git-buildpackage.
+  * Update copyright file:
+    + List upstream issue tracker as preferred upstream contact.
+  * Update package relations:
+    + Simplify to drop Boost fallback build-dependencies: Needed only
+      for backport to Lenny, which is no longer supported.
+    + Bump fallback BerkeleyDB build-dependency to 4.8 (default version
+      is in Squeeze), and stop suggesting older utils package than that.
+    + Relax to build-depend unversioned on debhelper (i.e. revert
+      tightening introduced in 0.7.2-1): Needed version satisfied in
+      stable, and oldstable is no longer supported.
+  * Drop NEWS file: Only entry was about change of BerkeleyDB version,
+    which is no longer news for testing/unstable users, and package is
+    not yet stable so not news there either.
 
  -- Scott Howard <showard@debian.org>  Tue, 18 Dec 2012 10:19:16 -0500
 
