--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,7 @@ bitcoin (0.7.2-2) UNRELEASED; urgency=low
   * Add new binary package bitcoin-qt for the GUI version of the bitcoin
     client, with DBus and QR code generation enabled.
     Build-depend on qt4-qmake, libqt4-dev and libqrencode-dev.
+    Remove obsolete block about the missing GUI from README.Debian.
     Closes: #627263. Thanks to Leandro Lucarella and Matt Corallo.
 
   [ Jonas Smedegaard ]
