--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,8 @@ bitcoin (0.7.2-2) UNRELEASED; urgency=low
     Build-depend on qt4-qmake, libqt4-dev and libqrencode-dev.
     Remove obsolete block about the missing GUI from README.Debian.
     Closes: #627263. Thanks to Leandro Lucarella and Matt Corallo.
+  * Add setup to install bash completion rules for bitcoind
+    in bitcoind package.  Based on work from Matt Corallo.
 
   [ Jonas Smedegaard ]
   * Add README.source referencing our use of CDBS and git-buildpackage.
