--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,8 @@ bitcoin (0.7.2-2) UNRELEASED; urgency=low
     client, with DBus and QR code generation enabled.
     Build-depend on qt4-qmake, libqt4-dev and libqrencode-dev.
     Remove obsolete block about the missing GUI from README.Debian.
+    Rename obsolete bitcoin-gui.menu to bitcoin-qt.menu and update
+    title and section based on desktop file.
     Closes: #627263. Thanks to Leandro Lucarella and Matt Corallo.
   * Add setup to install bash completion rules for bitcoind
     in bitcoind package.  Based on work from Matt Corallo.
