--- a/debian/changelog
+++ b/debian/changelog
@@ -22,6 +22,8 @@ bitcoin (0.7.2-2) UNRELEASED; urgency=low
     Rename obsolete bitcoin-gui.menu to bitcoin-qt.menu and update
     title and section based on desktop file.
     Closes: #627263. Thanks to Leandro Lucarella and Matt Corallo.
+  * Add manual page for bitcoin-qt from the git repository of
+    Dmitry Smirnov.
   * Add setup to install bash completion rules for bitcoind
     in bitcoind package.  Based on work from Matt Corallo.
 
