--- a/debian/changelog
+++ b/debian/changelog
@@ -20,7 +20,9 @@ bitcoin (0.7.2-2) UNRELEASED; urgency=low
     Build-depend on qt4-qmake, libqt4-dev and libqrencode-dev.
     Remove obsolete block about the missing GUI from README.Debian.
     Rename obsolete bitcoin-gui.menu to bitcoin-qt.menu and update
-    title and section based on desktop file.
+    title and section based on desktop file.  Enable some
+    hardening using dpkg-buildflags, while skipping others because
+    it breaks the build.
     Closes: #627263. Thanks to Leandro Lucarella and Matt Corallo.
   * Add manual page for bitcoin-qt from the git repository of
     Dmitry Smirnov.
