--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-bitcoin (0.7.2-2) UNRELEASED; urgency=low
+bitcoin (0.7.2-2) unstable; urgency=low
 
   [ Scott Howard ]
   * Update long description: Blockchain requires several GB of space.
@@ -59,8 +59,11 @@ bitcoin (0.7.2-2) UNRELEASED; urgency=low
   * Add patch 1004 to use QImage.bits (not QImage.constBits), to ease
     backporting.
     Thanks to Petter Reinholdtsen.
+  * Build-depend on libqtwebkit-dev: Apparently that is needed (linker
+    error if missing).
+  * Disable parallel builds: Perhaps cause of Qt linker errors.
 
- -- Scott Howard <showard@debian.org>  Tue, 18 Dec 2012 10:19:16 -0500
+ -- Jonas Smedegaard <dr@jones.dk>  Mon, 24 Dec 2012 05:27:25 +0100
 
 bitcoin (0.7.2-1) unstable; urgency=low
 
