--- a/debian/manpages/bitcoin-qt.1
+++ b/debian/manpages/bitcoin-qt.1
@@ -185,7 +185,7 @@ Server certificate file (default: server.cert)
 Server private key (default: server.pem)
 .TP
 \fB\-rpcsslciphers=\fR<ciphers>
-Acceptable ciphers (default: TLSv1+HIGH:!SSLv2:!aNULL:!eNULL:!AH:!3DES:@STRENGTH)
+Acceptable ciphers (default: TLSv1+HIGH:\:!SSLv2:\:!aNULL:\:!eNULL:\:!AH:\:!3DES:\:@STRENGTH)
 .SS "UI options:"
 .TP
 \fB\-lang=\fR<lang>
