--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+bitcoin (0.7.2-3) UNRELEASED; urgency=low
+
+  [ Petter Reinholdtsen ]
+  * Clean up hyphen handling and rewrite long line causing roff warning
+    to one where word wrapping work better, to avoid lintian warning about
+    bitcoin.conf.5.
+
+ -- Jonas Smedegaard <dr@jones.dk>  Wed, 26 Dec 2012 08:26:14 +0100
+
 bitcoin (0.7.2-2) unstable; urgency=low
 
   [ Scott Howard ]
