--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ bitcoin (0.7.2-3) UNRELEASED; urgency=low
   * Clean up hyphen handling and rewrite long line causing roff warning
     to one where word wrapping work better, to avoid lintian warning about
     bitcoin.conf.5.
+  * Update Standards-Version from 3.9.3 to 3.9.4.  No changes needed.
 
  -- Jonas Smedegaard <dr@jones.dk>  Wed, 26 Dec 2012 08:26:14 +0100
 
