--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ bitcoin (0.7.2-3) UNRELEASED; urgency=low
     to one where word wrapping work better, to avoid lintian warning about
     bitcoin.conf.5.
   * Update Standards-Version from 3.9.3 to 3.9.4.  No changes needed.
+  * Add patch and rules code to try to debug #672524.
 
  -- Jonas Smedegaard <dr@jones.dk>  Wed, 26 Dec 2012 08:26:14 +0100
 
