--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bitcoin (0.8.0-1) UNRELEASED; urgency=low
+
+  * New upstream release (Closes: #700910)
+
+ -- Scott Howard <showard@debian.org>  Tue, 26 Feb 2013 14:10:15 -0500
+
 bitcoin (0.7.2-3) unstable; urgency=low
 
   [ Petter Reinholdtsen ]
