--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,9 @@
 bitcoin (0.8.0-1) UNRELEASED; urgency=low
 
   * New upstream release (Closes: #700910)
+  * Removed debian/patches/1004_conservative_qt-dbus.patch
+    applied upstream
+  * removed depricated Encoding key from bitcoin-qt.desktop
 
  -- Scott Howard <showard@debian.org>  Tue, 26 Feb 2013 14:10:15 -0500
 
