--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 bitcoin (0.8.1-2) UNRELEASED; urgency=low
 
-  * Fixes kFreeBSD FTBFS for unknown OS
+  * Import patches from libleveldb to fixes kFreeBSD & hurd FTBFS
   * Added high res icons to package (LP: #1127181)
 
  -- Scott Howard <showard@debian.org>  Tue, 26 Mar 2013 13:52:40 -0400
