--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ bitcoin (0.8.1-2) UNRELEASED; urgency=low
 
   * Import patches from libleveldb to fixes kFreeBSD & hurd FTBFS
   * Added high res icons to package (LP: #1127181)
+  * Remove reference to IRC network in debian/control
 
  -- Scott Howard <showard@debian.org>  Tue, 26 Mar 2013 13:52:40 -0400
 
