--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,13 @@
-bitcoin (0.8.1-3) UNRELEASED; urgency=low
+bitcoin (0.8.2-1) UNRELEASED; urgency=low
 
   [ Jonas Smedegaard ]
   * Update README.source to emphasize control.in file as *not* a
     show-stopper for contributions. 
 
- -- Scott Howard <showard@debian.org>  Tue, 23 Apr 2013 21:50:59 -0400
+  [ Scott Howard ]
+  * New upstream release
+
+ -- Scott Howard <showard@debian.org>  Fri, 31 May 2013 17:43:50 -0400
 
 bitcoin (0.8.1-2) unstable; urgency=low
 
