--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bitcoin (0.8.4-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- Scott Howard <showard@debian.org>  Tue, 03 Sep 2013 22:58:54 -0400
+
 bitcoin (0.8.3-2) unstable; urgency=low
 
   * Use included leveldb instead of system library. See debian/README.source
