--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bitcoin (0.8.5-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Scott Howard <showard@debian.org>  Fri, 13 Sep 2013 09:55:38 -0400
+
 bitcoin (0.8.4-1) unstable; urgency=low
 
   * New upstream release.
