--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bitcoin (0.8.6-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Scott Howard <showard@debian.org>  Mon, 09 Dec 2013 10:26:57 -0500
+
 bitcoin (0.8.5-1) unstable; urgency=low
 
   * New upstream release.
