--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bitcoin (0.9.0-1) UNRELEASED; urgency=low
+
+  * New upstream release.
+
+ -- Scott Howard <showard@debian.org>  Wed, 19 Mar 2014 15:37:29 -0400
+
 bitcoin (0.8.6-1) unstable; urgency=low
 
   * New upstream release. (Closes: #731772)
