--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-bitcoin (0.9.0-1) UNRELEASED; urgency=low
+bitcoin (0.9.0-1) unstable; urgency=low
 
   * New upstream release.
     - autotools build & add BDs for dh-autoreconf,libprotobuf-dev,
@@ -6,6 +6,7 @@ bitcoin (0.9.0-1) UNRELEASED; urgency=low
   * Refreshed patches
     - 1003_qmake_cleanup.patch, no longer needed - no longer uses qmake
     - 1007_libmemenv_hurd.patch, no longer make msync() calls
+  * Refreshed debian/copyright, debian/copyright_hints
 
  -- Scott Howard <showard@debian.org>  Wed, 19 Mar 2014 15:37:29 -0400
 
