--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ bitcoin (0.9.0-1) unstable; urgency=low
     - 1003_qmake_cleanup.patch, no longer needed - no longer uses qmake
     - 1007_libmemenv_hurd.patch, no longer make msync() calls
   * Refreshed debian/copyright, debian/copyright_hints
+  * Debian SV 3.9.5 (no changes)
 
  -- Scott Howard <showard@debian.org>  Wed, 19 Mar 2014 15:37:29 -0400
 
