--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bitcoin (0.9.1-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Scott Howard <showard@debian.org>  Tue, 08 Apr 2014 17:13:14 -0400
+
 bitcoin (0.9.0-1) unstable; urgency=low
 
   * New upstream release.
