--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bitcoin (0.9.2.1-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Scott Howard <showard@debian.org>  Tue, 15 Jul 2014 08:21:37 -0400
+
 bitcoin (0.9.2-1) unstable; urgency=medium
 
   * New upstream release.
