--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
-bitcoin (0.9.2.1-1) UNRELEASED; urgency=medium
+bitcoin (0.9.2.1-1) unstable; urgency=medium
 
   * New upstream release.
+  * Updated regex filter for debian copyright-check
 
  -- Scott Howard <showard@debian.org>  Tue, 15 Jul 2014 08:21:37 -0400
 
