--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bitcoin (0.9.3-1) unstable; urgency=medium
+
+  * New upstream release, minor bug fixes
+
+ -- Scott Howard <showard@debian.org>  Sun, 05 Oct 2014 12:41:11 -0400
+
 bitcoin (0.9.2.1-1) unstable; urgency=medium
 
   * New upstream release.
