lintian fixing debian/copyright

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,7 +3,8 @@ bitcoin (0.9.4-1) unstable; urgency=medium
   * New upstream release.
     - Fixes OpenSSL 1.0.1k incompatibility FTBFS and failure to sync
       blockchain (Closes: 775102)
-  * Updated debian/copyright, fixed typo in format tag
+  * Updated debian/copyright, fixed typo in format tag, added short
+    names to custom licenses (custom license)
   * Removed patches:
     - debian/patches/1003_qmake_cleanup.patch (unused)
     - debian/patches/2001_stupify_header_script.patch (no longer needed)
