--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bitcoin (0.10.0-1) unstable; urgency=medium
+
+  * New upstream release
+
+ -- Scott Howard <showard@debian.org>  Mon, 16 Feb 2015 12:52:26 -0500
+
 bitcoin (0.9.4-1) unstable; urgency=medium
 
   * New upstream release.
