--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+bitcoin (0.10.1-2) unstable; urgency=medium
+
+  * Switched to dh 7 style rules
+    - remove squeeze backport support
+    - bring in line with upstream packaging
+  * Build libbitcoinconsensus libraries and packages
+  * Merge upstream packaging features
+    - bitcoind.bash-cmpletion added
+
+ -- Scott Howard <showard@debian.org>  Tue, 26 May 2015 16:27:21 -0400
+
 bitcoin (0.10.1-1) unstable; urgency=medium
 
   * New upstream release
