--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+bitcoin (0.10.2-1) unstable; urgency=medium
+
+  * New upstream release
+  * Add BD on xvfb, xauth, and use xvfb-run on dh_auto_test so qt tests
+    run on systems without an X server (Closes: #790403)
+
+ -- Scott Howard <showard@debian.org>  Wed, 01 Jul 2015 10:37:00 -0400
+
 bitcoin (0.10.1-2) unstable; urgency=medium
 
   * Switched to dh 7 style rules
