--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bitcoin (0.10.2-4) UNRELEASED; urgency=medium
+
+  * Updated symbols file
+
+ -- Scott Howard <showard@debian.org>  Wed, 08 Jul 2015 11:13:14 -0400
+
 bitcoin (0.10.2-3) unstable; urgency=medium
 
   * Try running tests with writable ${HOME} and ${TMPDIR}, drop build 
