--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bitcoin (0.11.0-2) UNRELEASED; urgency=medium
+
+  * Updated symbols
+
+ -- Scott Howard <showard@debian.org>  Fri, 31 Jul 2015 15:35:58 -0400
+
 bitcoin (0.11.0-1) unstable; urgency=medium
 
   * New upstream release (Closes: #793622)
