--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
-bitcoin (0.11.0-2) UNRELEASED; urgency=medium
+bitcoin (0.11.1-1) unstable; urgency=medium
 
   * Updated symbols
+  * New upstream release (Closes: #802956)
+  * New bitcoind package (Closes: #797683)
 
- -- Scott Howard <showard@debian.org>  Fri, 31 Jul 2015 15:35:58 -0400
+ -- Scott Howard <showard@debian.org>  Sun, 08 Nov 2015 10:11:17 -0500
 
 bitcoin (0.11.0-1) unstable; urgency=medium
 
