--- a/debian/changelog
+++ b/debian/changelog
@@ -2,7 +2,10 @@ bitcoin (0.11.1-1) unstable; urgency=medium
 
   * Updated symbols
   * New upstream release (Closes: #802956)
-  * New bitcoind package (Closes: #797683)
+  * New bitcoin-tx package (Closes: #797683)
+  * Updated debian/copyright
+  * Removed menu file, just use .desktop file
+  * Remove lintian overrides, no longer needed
 
  -- Scott Howard <showard@debian.org>  Sun, 08 Nov 2015 10:11:17 -0500
 
