--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bitcoin (0.11.1-2) UNRELEASED; urgency=medium
+
+  * Updated symbols
+
+ -- Scott Howard <showard@debian.org>  Wed, 11 Nov 2015 18:00:31 -0500
+
 bitcoin (0.11.1-1) unstable; urgency=medium
 
   * Updated symbols
