--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-bitcoin (0.11.1-2) UNRELEASED; urgency=medium
+bitcoin (0.11.2-1) unstable; urgency=medium
 
   * Updated symbols
+  * New upstream release (Closes: #805052)
 
- -- Scott Howard <showard@debian.org>  Wed, 11 Nov 2015 18:00:31 -0500
+ -- Scott Howard <showard@debian.org>  Thu, 21 Jan 2016 22:43:13 -0500
 
 bitcoin (0.11.1-1) unstable; urgency=medium
 
