--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+bitcoin (0.12.1-0.1) UNRELEASED; urgency=medium
+
+  * Non-maintainer upload.
+  * New upstream release. (Closes: Bug#822203)
+
+ -- Anthony Towns <aj@erisian.com.au>  Fri, 19 Aug 2016 18:48:51 +1000
+
 bitcoin (0.11.2-1) unstable; urgency=medium
 
   * Updated symbols
