--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ bitcoin (0.12.1-0.1) UNRELEASED; urgency=medium
   * New upstream release. (Closes: Bug#822203)
   * Remove cdbs from debian/rules, add debian/copyright-check to help
     with updating debian/copyright info (Closes: Bug#808969)
+  * Update dependencies to qt5.
 
  -- Anthony Towns <aj@erisian.com.au>  Fri, 19 Aug 2016 18:48:51 +1000
 
