--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ bitcoin (0.12.1-0.1) UNRELEASED; urgency=medium
   * Add dependency on libdevent-dev.
   * Add dependency on libzmq for ZeroMQ support.
   * Force use of gcc/g++ 5. (Closes: Bug#812275)
+  * Compatibility patch for OpenSSL 1.1 opaque types. (Closes: Bug#828248)
 
  -- Anthony Towns <aj@erisian.com.au>  Fri, 19 Aug 2016 18:48:51 +1000
 
