--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-bitcoin (0.12.1-0.1) UNRELEASED; urgency=medium
+bitcoin (0.12.1-0.1) unstable; urgency=medium
 
   * Non-maintainer upload.
   * New upstream release. (Closes: Bug#822203)
@@ -10,6 +10,7 @@ bitcoin (0.12.1-0.1) UNRELEASED; urgency=medium
   * Force use of gcc/g++ 5. (Closes: Bug#812275)
   * Compatibility patch for OpenSSL 1.1 opaque types. (Closes: Bug#828248)
   * Apply reproducible build patch from Reiner Herrmann. (Closes: Bug#791834)
+  * Bump standards version.
 
  -- Anthony Towns <aj@erisian.com.au>  Fri, 19 Aug 2016 18:48:51 +1000
 
