--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,12 @@
-bitcoin (0.13.0~rc3-0.1) experimental; urgency=medium
+bitcoin (0.13.0-0.1~exp1) experimental; urgency=medium
 
   * Non-maintainer upload.
-  * New upstream release candidate.
+  * New upstream release.
   * Allow compilation with gcc/g++ 6. (See Bug#812275)
   * Additional fixes for openssl 1.1 compatibility. (See Bug#828248)
   * Check if -latomic is needed (it is on mips*).
 
- -- Anthony Towns <aj@erisian.com.au>  Sat, 20 Aug 2016 02:22:48 +1000
+ -- Anthony Towns <aj@erisian.com.au>  Tue, 23 Aug 2016 17:06:04 +1000
 
 bitcoin (0.12.1-0.1) unstable; urgency=medium
 
