--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ bitcoin (0.13.1~rc2-0.1) UNRELEASED; urgency=medium
 
   * Non-maintainer upload.
   * New upstream release.
+  * Patch for -latomic is included upstream, so drop Debian-specific patch.
 
  -- Anthony Towns <aj@erisian.com.au>  Fri, 21 Oct 2016 20:03:13 +1000
 
